pipelines implemented